fix: misc part 3 stardust crusaders